# starmoth

./: .gitignore  configure.ac
contrib/: Makefile.am
data/shaders/: FresnelColour.frag  FresnelColour.vert  billboard_sphereimpostor.frag  billboard_sphereimpostor.vert  data.glsl  gassphere_base.frag  gassphere_base.vert  geosphere_sky.frag  geosphere_terrain.frag  geosphere_terrain.vert  multi.frag  multi.vert  planetrings.frag  planetrings.vert  shield.frag  shield.vert  skybox.frag  skybox.vert  starfield.frag  ui.frag
data/ships/: amphiesma.json  deneb.json  dsminer.json  kanara.json  kanara_civ.json  lunarshuttle.json  malabar.json  molamola.json  natrix.json  nerodia.json  pumpkinseed.json  sinonatrix.json  vatakara.json  venturestar.json  wave.json  xylophis.json
data/stations/: big_crappy.json  ground_station.json  hoop.json  new_ground.json
src/: AmbientSounds.cpp  Background.cpp  Background.h  BaseSphere.cpp  BaseSphere.h  Body.cpp  Camera.cpp  Camera.h  Color.cpp  Color.h  DeathView.cpp  DeathView.h  DeleteEmitter.h  DynamicBody.cpp  GalacticView.cpp  Game.cpp  GameConfig.cpp  GasGiant.cpp  GeoPatch.cpp  HudTrail.cpp  HudTrail.h  HyperspaceCloud.cpp  HyperspaceCloud.h  Intro.cpp  Makefile.am  Missile.cpp  ModelBody.cpp  ModelViewer.cpp  ModelViewer.h  Object.h  ObjectViewerView.cpp  Pi.cpp  Pi.h  Planet.cpp  Planet.h  Player.cpp  Player.h  Projectile.cpp  PropertiedObject.h  PropertyMap.cpp  (+51 more)
src/collider/: BVHTree.cpp  Geom.cpp
src/galaxy/: GalaxyCache.cpp  Makefile.am  Sector.cpp  Sector.h  SectorCache.cpp  StarSystem.cpp  StarSystem.h  SystemPath.h
src/gameui/: Face.cpp  Face.h  Makefile.am
src/graphics/: Drawables.cpp  Drawables.h  Frustum.cpp  Graphics.cpp  Light.h  Makefile.am  Material.h  Renderer.h  VertexBuffer.cpp  VertexBuffer.h
src/graphics/gl/: Attribute.cpp  Attribute.h  FresnelColourMaterial.cpp  FresnelColourMaterial.h  GasGiantMaterial.cpp  GasGiantMaterial.h  GeoSphereMaterial.cpp  GeoSphereMaterial.h  MultiMaterial.cpp  Program.cpp  Program.h  RingMaterial.cpp  ShieldMaterial.cpp  ShieldMaterial.h  SkyboxMaterial.h  SphereImpostorMaterial.h  StarfieldMaterial.h  UIMaterial.cpp  UIMaterial.h  Uniform.cpp  Uniform.h  VtxColorMaterial.cpp  VtxColorMaterial.h  glMaterial.cpp  glMaterial.h  glRenderState.cpp  glRenderTarget.cpp  glRenderTarget.h  glRenderer.cpp  glRenderer.h  glTexture.cpp  glTexture.h  glVertexBuffer.cpp  glVertexBuffer.h
src/graphics/opengl/: Attribute.cpp  FresnelColourMaterial.cpp  GasGiantMaterial.h  GeoSphereMaterial.cpp  GeoSphereMaterial.h  MultiMaterial.cpp  MultiMaterial.h  Program.cpp  Program.h  RingMaterial.cpp  RingMaterial.h  ShieldMaterial.cpp  ShieldMaterial.h  SphereImpostorMaterial.h  UIMaterial.cpp  Uniform.cpp  Uniform.h  VtxColorMaterial.cpp  glMaterial.cpp  glMaterial.h  glRenderState.cpp  glRenderState.h  glRenderTarget.cpp  glRenderTarget.h  glRenderer.cpp  glRenderer.h  glVertexBuffer.cpp  glVertexBuffer.h
src/gui/: Gui.cpp  Gui.h  GuiButton.cpp  GuiButton.h  GuiContainer.cpp  GuiContainer.h  GuiLabel.cpp  GuiLabel.h  GuiLabelSet.cpp  GuiLabelSet.h  GuiMeterBar.cpp  GuiMeterBar.h  GuiRadioButton.cpp  GuiRadioButton.h  GuiScreen.cpp  GuiScreen.h  GuiTabbed.cpp  GuiTextEntry.cpp  GuiTextEntry.h  GuiTextLayout.cpp  GuiTextLayout.h  GuiTexturedQuad.cpp  GuiTexturedQuad.h  GuiToggleButton.cpp  GuiToggleButton.h  GuiToolTip.cpp  GuiToolTip.h  GuiVScrollBar.cpp  GuiVScrollBar.h  GuiWidget.h
src/posix/: FileSystemPosix.cpp
src/scenegraph/: Billboard.cpp  Billboard.h  Label3D.cpp  Label3D.h  Loader.cpp  Makefile.am  Model.cpp  Model.h  ModelSkin.h  Node.cpp  StaticGeometry.cpp  Thruster.cpp  Thruster.h
src/terrain/: Makefile.am
src/text/: TextureFont.cpp  TextureFont.h
src/ui/: CellSpec.h  Context.cpp  Context.h  Event.cpp  Event.h  Gradient.cpp  Gradient.h  Icon.cpp  Icon.h  Image.cpp  Image.h  Label.cpp  Label.h  Makefile.am  Skin.cpp  Skin.h  TextEntry.cpp  TextEntry.h  TextLayout.cpp  TextLayout.h
src/win32/: FileSystemWin32.cpp  pch.h
win32/vc2013Express/: modelcompiler.vcxproj  pioneer.sln  pioneer.vcxproj  pioneer.vcxproj.filters  starmoth.sln  starmoth.vcxproj  starmoth.vcxproj.filters
win32/vc2013Express/collider/: collider.vcxproj
win32/vc2013Express/galaxy/: galaxy.vcxproj  galaxy.vcxproj.filters
win32/vc2013Express/gameui/: gameui.vcxproj  gameui.vcxproj.filters
win32/vc2013Express/glew/: glew.vcxproj
win32/vc2013Express/graphics/: graphics.vcxproj  graphics.vcxproj.filters
win32/vc2013Express/gui/: gui.vcxproj
win32/vc2013Express/jenkins/: jenkins.vcxproj
win32/vc2013Express/jobswarm/: jobswarm.vcxproj
win32/vc2013Express/json/: json.vcxproj
win32/vc2013Express/newmodel/: newmodel.vcxproj  newmodel.vcxproj.filters
win32/vc2013Express/profiler/: profiler.vcxproj
win32/vc2013Express/terrain/: terrain.vcxproj
win32/vc2013Express/text/: text.vcxproj
win32/vc2013Express/ui/: ui.vcxproj  ui.vcxproj.filters
